--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,8 +1,8 @@
 <% @members.each do |member| %>
   <ul class="members">
     <li class="name"><%= member.name %></li>
-    <li class="name"><%= member.role %></li>
-    <li class="name"><%= member.house %></li>
-    <li class="name"><%= member.patronus %></li>
+    <li class="role"><%= member.role %></li>
+    <li class="house"><%= member.house %></li>
+    <li class="patronus"><%= member.patronus %></li>
   </ul>
 <% end %>
