--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,4 +1,4 @@
-<% @members.each do |member| %>
+<% facade.members.each do |member| %>
   <ul class="members">
     <li class="name"><%= member.name %></li>
     <li class="role"><%= member.role %></li>
